[package]
name = "async-psec"
version = "0.1.0"
authors = ["Hardcore Sushi <hardcore.sushi@disroot.org>"]
edition = "2018"
description = "Asynchronous PSEC implementation"
readme = "README.md"
license = "MIT"
repository = "https://github.com/hardcore-sushi/async-psec"
keywords = ["psec", "async", "p2p"]
categories = ["asynchronous", "cryptography", "network-programming"]

[dependencies]
tokio = {version = "1.6", features = ["net", "io-util"]}
async-trait = "0.1"
rand = "0.7"
x25519-dalek = "1.1" #for shared secret
ed25519-dalek = "1.0" #for singing
sha2 = "0.9"
aes-gcm = "0.9"
hkdf = "0.11"
hmac = "0.11"

[dev-dependencies]
tokio = {version = "1.6", features = ["rt-multi-thread", "macros"]}

[features]
split = []

[package.metadata.docs.rs]
all-features = true